Remove call to Class.newInstance(), which is deprecated as of JDK 9